# nota-config

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
schema/: nota-config.concept.schema
src/: configuration.rs  error.rs  lib.rs  source.rs
tests/: argv_detection.rs  inline_nota.rs  nota_file.rs  rkyv_file.rs  test_env_fallback.rs
