[package]
name         = "nota-config"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license-file = "LICENSE.md"
repository   = "https://github.com/LiGoldragon/nota-config"
description  = "Typed configuration input for Persona-stack binaries. NOTA records (inline argv, .nota file, or .rkyv archive) decoded into typed configuration types — no environment-variable channel for control-plane settings."

[lib]
path = "src/lib.rs"

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv      = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
